[gd_scene load_steps=18 format=2]

[ext_resource path="res://alarm.gd" type="Script" id=1]
[ext_resource path="res://program.gd" type="Script" id=2]
[ext_resource path="res://alarma.mp3" type="AudioStream" id=3]
[ext_resource path="res://reminderZone.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://nia.gd" type="Script" id=6]
[ext_resource path="res://noteZone.gd" type="Script" id=7]
[ext_resource path="res://nai.gd" type="Script" id=8]
[ext_resource path="res://paper_bg.png" type="Texture" id=9]
[ext_resource path="res://btntheme.tres" type="Theme" id=10]
[ext_resource path="res://fdBG.gd" type="Script" id=11]
[ext_resource path="res://options.gd" type="Script" id=12]
[ext_resource path="res://ima.gd" type="Script" id=13]
[ext_resource path="res://fdMs.gd" type="Script" id=14]
[ext_resource path="res://exitprogramtrans.gd" type="Script" id=15]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://GoNotoCurrent.ttf"

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 1
font_data = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -122.0, 94.0 ]
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 7

[node name="alarmas" type="Control" parent="Panel"]
anchor_right = 0.5
anchor_bottom = 1.0

[node name="zona2" type="ColorRect" parent="Panel/alarmas"]
self_modulate = Color( 1, 1, 1, 0.901961 )
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.975
anchor_bottom = 0.95
margin_left = -0.6
margin_top = -1.0
margin_right = -0.200012
margin_bottom = -32.0
color = Color( 0.105882, 0.105882, 0.105882, 1 )

[node name="zona3" type="ColorRect" parent="Panel/alarmas"]
anchor_left = 0.05
anchor_top = 0.95
anchor_right = 0.975
anchor_bottom = 0.95
margin_left = -0.6
margin_top = -33.0
margin_right = -0.200012
margin_bottom = -1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Panel/alarmas/zona3"]
anchor_right = 1.0
margin_top = 1.0
margin_right = -137.0
margin_bottom = 32.0
text = "REMINDER ZONE"
align = 1
valign = 1

[node name="zona" type="ScrollContainer" parent="Panel/alarmas"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.975
anchor_bottom = 0.95
margin_left = 8.0
margin_top = 8.0
margin_bottom = -33.0

[node name="GridContainer" type="GridContainer" parent="Panel/alarmas/zona"]
script = ExtResource( 6 )

[node name="createRem" type="Button" parent="Panel/alarmas"]
anchor_left = 0.975
anchor_top = 0.947
anchor_right = 0.975
anchor_bottom = 0.947
margin_left = -135.2
margin_top = -30.2
margin_right = -1.20001
margin_bottom = -0.200012
theme = ExtResource( 10 )
text = "+ New reminder"

[node name="notas" type="Control" parent="Panel"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0

[node name="zona2" type="ColorRect" parent="Panel/notas"]
self_modulate = Color( 1, 1, 1, 0.901961 )
anchor_left = 0.025
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
margin_left = 0.400001
margin_top = -1.0
margin_right = -0.199982
margin_bottom = -32.0
color = Color( 0.105882, 0.105882, 0.105882, 1 )

[node name="zona3" type="ColorRect" parent="Panel/notas"]
anchor_left = 0.026
anchor_top = 0.95
anchor_right = 0.95
anchor_bottom = 0.95
margin_left = -0.312
margin_top = -33.0
margin_right = -0.400024
margin_bottom = -1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Panel/notas/zona3"]
anchor_right = 1.0
margin_top = 1.0
margin_right = -101.0
margin_bottom = 32.0
text = "NOTE ZONE"
align = 1
valign = 1

[node name="zona" type="ScrollContainer" parent="Panel/notas"]
anchor_left = 0.025
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
margin_left = 8.0
margin_top = 8.0
margin_bottom = -33.0

[node name="GridContainer" type="GridContainer" parent="Panel/notas/zona"]
script = ExtResource( 8 )

[node name="createNot" type="Button" parent="Panel/notas"]
anchor_left = 0.951
anchor_top = 0.95
anchor_right = 0.951
anchor_bottom = 0.95
margin_left = -99.912
margin_top = -32.0
margin_right = -1.91199
margin_bottom = -2.0
theme = ExtResource( 10 )
text = "+ New note"

[node name="reminderZone" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="reminderZone"]
self_modulate = Color( 1, 1, 1, 0.596078 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.0980392, 0.172549, 1 )

[node name="reminderBox" type="ColorRect" parent="reminderZone"]
self_modulate = Color( 0.494118, 0.494118, 0.494118, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="Label" type="Label" parent="reminderZone/reminderBox"]
margin_left = 20.0
margin_top = 20.0
margin_right = 144.0
margin_bottom = 43.0
text = "REMINDER:"

[node name="rtitle" type="LineEdit" parent="reminderZone/reminderBox"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 52.0
margin_right = -20.0
margin_bottom = 108.0
text = "adksadfsdlfksldf lsdkjf lsdjfl slsjkdfl ssdjlkgsjdglsj l jsdlkjsdlgk jsl l jsdlgkj sldgjsldgj lsl sjl"

[node name="Label3" type="Label" parent="reminderZone/reminderBox"]
margin_left = 20.0
margin_top = 124.0
margin_right = 148.0
margin_bottom = 147.0
text = "DESCRIPTION:"

[node name="Label4" type="Label" parent="reminderZone/reminderBox"]
margin_left = 20.0
margin_top = 260.0
margin_right = 148.0
margin_bottom = 283.0
text = "DATE:"

[node name="Label5" type="Label" parent="reminderZone/reminderBox"]
margin_left = 316.0
margin_top = 260.0
margin_right = 444.0
margin_bottom = 283.0
text = "HOUR:"

[node name="rdesc" type="TextEdit" parent="reminderZone/reminderBox"]
margin_left = 20.0
margin_top = 156.0
margin_right = 580.0
margin_bottom = 252.0
text = "adksadfsdlfksldf lsdkjf lsdjfl slsjkdfl ssdjlkgsjdglsj l jsdlkjsdlgk jsl l jsdlgkj sldgjsldgj lsl sjladksadfsdlfksldf lsdkjf lsdjfl slsjkdfl ssdjlkgsjdglsj l jsdlkjsdlgk jsl l jsdlgkj sldgjsldgj lsl sjladksadfsdlfksldf lsdkjf lsdjfl slsjkdfl ssdjlkgsjdglsj l jsdlkjsdlgk jsl l jsdlgkj sldgjsldgj lsl sjladksadfsdlfksldf lsdkjf lsdjfl slsjkdfl ssdjlkgsjdglsj l jsdlkjsdlgk jsl l jsdlgkj sldgjsldgj lsl sjl"
wrap_enabled = true

[node name="save" type="Button" parent="reminderZone/reminderBox"]
margin_left = 458.0
margin_top = 357.0
margin_right = 580.0
margin_bottom = 386.0
text = "SAVE"

[node name="nosave" type="Button" parent="reminderZone/reminderBox"]
margin_left = 116.0
margin_top = 357.0
margin_right = 256.0
margin_bottom = 386.0
text = "Exit without save"

[node name="destroy" type="Button" parent="reminderZone/reminderBox"]
margin_left = 20.0
margin_top = 357.0
margin_right = 106.0
margin_bottom = 386.0
custom_colors/font_color = Color( 1, 0.470588, 0.470588, 1 )
text = "DESTROY"

[node name="sday" type="SpinBox" parent="reminderZone/reminderBox"]
margin_left = 20.0
margin_top = 287.0
margin_right = 94.0
margin_bottom = 320.0
min_value = 1.0
max_value = 31.0
value = 31.0
prefix = "D"

[node name="smonth" type="SpinBox" parent="reminderZone/reminderBox"]
margin_left = 102.0
margin_top = 287.0
margin_right = 176.0
margin_bottom = 320.0
min_value = 1.0
max_value = 12.0
value = 12.0
prefix = "M"

[node name="syear" type="SpinBox" parent="reminderZone/reminderBox"]
margin_left = 184.0
margin_top = 287.0
margin_right = 261.0
margin_bottom = 320.0
min_value = 1.0
max_value = 99999.0
value = 2023.0
allow_greater = true
prefix = "Y"

[node name="shour" type="SpinBox" parent="reminderZone/reminderBox"]
margin_left = 314.0
margin_top = 287.0
margin_right = 388.0
margin_bottom = 320.0
max_value = 23.0
value = 23.0
prefix = "hr"

[node name="sminute" type="SpinBox" parent="reminderZone/reminderBox"]
margin_left = 410.0
margin_top = 287.0
margin_right = 484.0
margin_bottom = 320.0
max_value = 59.0
value = 59.0
prefix = "m"

[node name="noteZone" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="noteZone"]
self_modulate = Color( 1, 1, 1, 0.596078 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.0980392, 0.172549, 1 )

[node name="reminderBox" type="ColorRect" parent="noteZone"]
self_modulate = Color( 0.494118, 0.494118, 0.494118, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -437.0
margin_top = -270.0
margin_right = 437.0
margin_bottom = 270.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="Label" type="Label" parent="noteZone/reminderBox"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 8.0
margin_right = -20.0
margin_bottom = 31.0
text = "Tittle"
align = 1

[node name="rtitle" type="LineEdit" parent="noteZone/reminderBox"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 36.0
margin_right = -20.0
margin_bottom = 69.0
text = "adksadfsdlfksldf lsdkjf lsdjfl slsjkdfl ssdjlkgsjdglsj l jsdlkjsdlgk jsl l jsdlgkj sldgjsldgj lsl sjl"

[node name="Label3" type="Label" parent="noteZone/reminderBox"]
margin_left = 20.0
margin_top = 80.0
margin_right = 148.0
margin_bottom = 103.0
text = "Note:"

[node name="rdesc" type="TextEdit" parent="noteZone/reminderBox"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 108.0
margin_right = -20.0
margin_bottom = 489.0
text = "adksadfsdlfksldf lsdkjf lsdjfl slsjkdfl ssdjlkgsjdglsj l jsdlkjsdlgk jsl l jsdlgkj sldgjsldgj lsl sjladksadfsdlfksldf lsdkjf lsdjfl slsjkdfl ssdjlkgsjdglsj l jsdlkjsdlgk jsl l jsdlgkj sldgjsldgj lsl sjladksadfsdlfksldf lsdkjf lsdjfl slsjkdfl ssdjlkgsjdglsj l jsdlkjsdlgk jsl l jsdlgkj sldgjsldgj lsl sjladksadfsdlfksldf lsdkjf lsdjfl slsjkdfl ssdjlkgsjdglsj l jsdlkjsdlgk jsl l jsdlgkj sldgjsldgj lsl sjl
dsf
sdg
gsd
sdg"
highlight_current_line = true
smooth_scrolling = true
wrap_enabled = true

[node name="save" type="Button" parent="noteZone/reminderBox"]
margin_left = 731.0
margin_top = 500.0
margin_right = 853.0
margin_bottom = 529.0
text = "SAVE"

[node name="nosave" type="Button" parent="noteZone/reminderBox"]
margin_left = 116.0
margin_top = 500.0
margin_right = 253.0
margin_bottom = 529.0
text = "Exit without save"

[node name="destroy" type="Button" parent="noteZone/reminderBox"]
margin_left = 20.0
margin_top = 500.0
margin_right = 106.0
margin_bottom = 529.0
custom_colors/font_color = Color( 1, 0.470588, 0.470588, 1 )
text = "DESTROY"

[node name="alarm" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="alarm"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.658824 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="alarm/ColorRect"]
stream = ExtResource( 3 )

[node name="ColorPickerButton2" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
text = "⚙"

[node name="options" type="Popup" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -128.0
margin_bottom = -32.0
script = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="options"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.337255 )

[node name="ColorPickerButton" type="ColorPickerButton" parent="options"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -32.0
action_mode = 0
flat = true
color = Color( 0.105882, 0.105882, 0.105882, 1 )
edit_alpha = false

[node name="appc" type="Label" parent="options"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -32.0
text = "App Color"
align = 1
valign = 1

[node name="appc2" type="Button" parent="options"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -64.0
margin_bottom = -32.0
text = "Select BG"
flat = true

[node name="appc3" type="Button" parent="options"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -96.0
margin_bottom = -64.0
text = "Select Audio"
flat = true

[node name="fdBG" type="FileDialog" parent="options"]
visible = true
margin_left = -418.0
margin_top = -310.0
margin_right = 4.0
margin_bottom = 5.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
script = ExtResource( 11 )

[node name="fdMs" type="FileDialog" parent="options"]
visible = true
margin_left = -418.0
margin_top = -310.0
margin_right = 4.0
margin_bottom = 5.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
script = ExtResource( 14 )

[node name="Panel" type="Panel" parent="options"]
anchor_top = -0.187
anchor_bottom = -0.187
margin_left = -340.0
margin_top = -0.0480003
margin_bottom = 332.952
script = ExtResource( 13 )

[node name="TextureRect" type="TextureRect" parent="options/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 7.0
margin_right = -9.0
margin_bottom = -8.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="exit" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_bottom = -1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Made by WoShiAnima | Version 1.0.1"
align = 1
valign = 2

[node name="exitprogramtrans" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 15 )

[connection signal="pressed" from="Panel/alarmas/createRem" to="reminderZone" method="_on_createRem_pressed"]
[connection signal="pressed" from="Panel/notas/createNot" to="noteZone" method="_on_createNot_pressed"]
[connection signal="pressed" from="reminderZone/reminderBox/save" to="reminderZone" method="_on_save_pressed"]
[connection signal="pressed" from="reminderZone/reminderBox/nosave" to="reminderZone" method="_on_nosave_pressed"]
[connection signal="pressed" from="reminderZone/reminderBox/destroy" to="reminderZone" method="_on_destroy_pressed"]
[connection signal="pressed" from="noteZone/reminderBox/save" to="noteZone" method="_on_save_pressed"]
[connection signal="pressed" from="noteZone/reminderBox/nosave" to="noteZone" method="_on_nosave_pressed"]
[connection signal="pressed" from="noteZone/reminderBox/destroy" to="noteZone" method="_on_destroy_pressed"]
[connection signal="pressed" from="ColorPickerButton2" to="options" method="_on_ColorPickerButton2_pressed"]
[connection signal="color_changed" from="options/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="options/appc2" to="options/fdBG" method="_on_appc2_pressed"]
[connection signal="button_up" from="options/appc3" to="options/fdMs" method="_on_appc3_button_up"]
[connection signal="file_selected" from="options/fdBG" to="options/fdBG" method="_on_fdBG_file_selected"]
[connection signal="gui_input" from="options/fdBG" to="options/fdBG" method="_on_fdBG_gui_input"]
[connection signal="file_selected" from="options/fdMs" to="options/fdMs" method="_on_fdMs_file_selected"]
[connection signal="gui_input" from="options/fdMs" to="options/fdMs" method="_on_fdBG_gui_input"]
[connection signal="timeout" from="exit" to="." method="_on_exit_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
